Fix iframe style on mobile screens

--- a/public/resources/styles/custom.css
+++ b/public/resources/styles/custom.css
@@ -408,6 +408,6 @@ Contact Section
   border: 2px solid gray;
   border-radius: 1em;
   margin: 0 0.5em;
-  height: 100%;
+  height: 420px;
   width: 100%;
 }
